--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
 <head>
   <title>TaskScheduler</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
