--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,10 +6,17 @@
 <head>
   <title>TaskScheduler</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+
+<% if user_signed_in? %>
+  <%= link_to("Log out", destroy_user_session_path) %>
+<% else %>
+  <%= link_to("Create an Account", new_user_registration_path) %>
+  <%= link_to("Log in", new_user_session_path) %>
+<% end %>
 
 <%= yield %>
 
