--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,3 +2,9 @@
   <%= render 'tasks/form', f: f %>
 <% end %>
 <%= button_to 'Delete Task', room_task_path(room_id: @task.room.id, task: @task), method: :delete %>
+
+<% if @task.errors.any? %>
+  <% @task.errors.full_messages.each do |error| %>
+    <%= error %><br>
+  <% end %>
+<% end %>
